[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cobble"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.20.0",
    "quimb>=1.4.0",
    "pytest>=7.0.0",
    "pennylane>=0.42.3",
    "scipy>=1.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]
